working, functional forum

--- a/templates/signup2.html
+++ b/templates/signup2.html
@@ -9,33 +9,35 @@
       <div class="col-md-12">
         <div class="login-container">
           <h2 class="login-text">Sign Up</h2>
-          <form>
+          <form method="POST">
             <div class="form-group">
               <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" placeholder="Enter username">
+              <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" placeholder="Enter password">
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
             </div>
             <div class="form-group">
               <label for="confirm-password">Confirm Password</label>
-              <input type="password" class="form-control" id="confirm-password" placeholder="Confirm password">
+              <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Confirm password">
             </div>
             <div class="form-group">
                 <label for="secretkey">Key</label>
-                <input type="password" class="form-control" id="secretkey" placeholder="Key">
+                <input type="password" class="form-control" name="secretkey" id="secretkey" placeholder="Key">
               </div>
             <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
           </form>
+          {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class=flashes>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
           <div class="login-link">
-            {% with messages = get_flashed_messages() %}
-                {%if messages %}
-                    {%for message in messages %}
-                        <p>{{message}}</p>
-                    {% endfor%}
-                {%endif%}
-            {% endwith %}
             Already have an account? <a href="/login">Log in</a>
           </div>
         </div>
