--- a/templates/base.html
+++ b/templates/base.html
@@ -7,24 +7,12 @@
   <link href="https://fonts.googleapis.com/css?family=Jura&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
   
-  <style>
-    body {
-      background-color: #646464;
-      font-family: 'Jura', sans-serif;
-    }
-    .top-bar {
-      background-color: #009B7F;
-      color: #FFFFFF;
-      text-align: center;
-      padding: 10px;
-      font-size: 24px;
-    }
-  </style>
 </head>
 <body>
     {% set active_page = active_page|default('home') -%}
   <div class="top-bar">
-    <h1>Menlo Student Forums</h1>
+      <h1>Menlo Student Forums</h1>
+      <h4>Users: {{count_users }}</h4>
   </div>
   {% block content %}
   {% endblock %}
