--- a/templates/home.html
+++ b/templates/home.html
@@ -1,77 +1,78 @@
-{% set active_page = "login" %}
+{% set active_page = "home" %}
 {% extends "base.html" %}
 
 {% block title %}Login{%endblock%}
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand homenavbar" href="/home">Home</a>
-
-      <a class="navbar-brand" href="/newpost">New Post</a>
-      <div class="collapse navbar-collapse justify-content-end">
+      <a class="navbar-brand homenavbar nav-left-buttons" href="/home">Home</a>
+      <a class="navbar-brand nav-left-buttons mr-auto" href="/newpost">New Post</a>
+      <div class=" justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item ml-auto">
-            <a class="navbar-brand" href="#">Logout</a>
+            <a class="navbar-brand" href="/logout">Logout {{u}}</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2 sortby">
+<div class="home-flashes">
+    {% with messages = get_flashed_messages() %}
+        {%if messages %}
+            {%for message in messages %}
+                <p class="post-flash">{{message}}</p>
+            {% endfor%}
+        {%endif%}
+    {% endwith %}
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-2 sortby">
             <h4>Sort By:</h4>
             <br>
-            <button class="btn btn-default">Most Recent</button>
+            <a class="btn btn-default" href="/home/recent">Most Recent</a>
             <br>
-            <button class="btn btn-default">Popular</button>
-          </div>
-          <div class="col-md-8">
-            <div class="post">
-                <h2 class="post-title">Lorem Ipsum</h2>
-                <div class="row">
-                  <div class="col-md-4">
-                    <p class="post-info">Posted by John Doe | 2 hours ago</p>
-                    <p class="post-stats">100 upvotes | 50 views</p>
-                    <button class="post-report-btn">Report</button>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="post-content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut eleifend urna. Aliquam faucibus, urna a tristique rutrum, risus ex faucibus turpis, sit amet pulvinar orci ipsum in libero. Donec eu felis ut turpis interdum pellentesque. Fusce vel tincidunt nisl. Aenean in purus vel risus feugiat hendrerit.</p>
+            <a class="btn btn-default" href="/home/popular">Popular</a>
+        </div>
+        
+        <!-- Post code starts here -->
+        <div class="col-md-7">
+            {% for post in posts %}
+                <div class="post" id="post{{post.id}}">
+                    <h2 class="post-title">{{ post.title }}</h2>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p class="post-info">Posted by {{ post.user_id }}</p>
+                            <p>{{ post.time }}</p>
+                            <p class="post-stats">{{ post.upvotes|length }} upvotes</p>
+                            <form method="POST" action="/upvote">
+                                <input type="hidden" value="{{ post.id }}" name="post-id">
+                                <button type="submit" class="btn btn-primary upvote-btn">Upvote</button>
+                            </form> 
+                        </div>
+                        <div class="col-md-8">
+                            <div class="post-content">
+                                <p>{{ post.content }}</p>
+                            </div>
+                        </div>  
                     </div>
-                  </div>
                 </div>
-              </div>
-              <div class="post">
-                <h2 class="post-title">Lorem Ipsum</h2>
-                <div class="row">
-                  <div class="col-md-4">
-                    <p class="post-info">Posted by John Doe | 2 hours ago</p>
-                    <p class="post-stats">100 upvotes | 50 views</p>
-                    <button class="post-report-btn">Report</button>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="post-content">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut eleifend urna. Aliquam faucibus, urna a tristique rutrum, risus ex faucibus turpis, sit amet pulvinar orci ipsum in libero. Donec eu felis ut turpis interdum pellentesque. Fusce vel tincidunt nisl. Aenean in purus vel risus feugiat hendrerit.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="categories col-md-2">
+            {% endfor %}
+        </div>
+        <!-- Post code ends here -->
+        
+        <div class="col-md-3 categories">
             <h3>Categories</h3>
             <ul>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Science</a></li>
-              <li><a href="#">Politics</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Entertainment</a></li>
+                <li><a href="/home/academics">Academics</a></li>
+                <li><a href="/home/social">Social</a></li>
+                <li><a href="/home/teachers">Teachers</a></li>
+                <li><a href="/home/athletics">Athletics</a></li>
+                <li><a href="/home/other">Other</a></li>
             </ul>
-          </div>
         </div>
-        </div> 
-        <hr>
-      </div> <!-- /container -->
     </div>
-    {%endblock%}
-    
+    <hr>
+</div>
+
+{%endblock%}
