--- a/templates/login2.html
+++ b/templates/login2.html
@@ -9,14 +9,14 @@
       <div class="col-md-12">
         <div class="login-container">
           <h2 class="login-text">Login</h2>
-          <form>
+          <form method="POST">
             <div class="form-group">
               <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" placeholder="Enter username">
+              <input type="text" name="username" class="form-control" id="username" placeholder="Enter username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" placeholder="Enter password">
+              <input type="password" name="password" class="form-control" id="password" placeholder="Enter password">
             </div>
             <button type="submit" class="btn btn-primary btn-block">Log in</button>
           </form>
