--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -10,7 +10,7 @@
       <div class=" justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item ml-auto">
-            <a class="navbar-brand" href="/logout">Logout {{u}}</a>
+            <a class="navbar-brand" href="/logout">Logout {{u.username}}</a>
           </li>
         </ul>
       </div>
