--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
   
 </head>
+<!-- base includes the top bar, user counter, and grey background-->
 <body>
     {% set active_page = active_page|default('home') -%}
   <div class="top-bar">
