--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     {% set active_page = active_page|default('home') -%}
   <div class="top-bar">
       <h1>Menlo Student Forums</h1>
-      <h4>Users: {{count_users }}</h4>
+      <h4>Users: {{session["count_users"] }}</h4>
   </div>
   {% block content %}
   {% endblock %}
