--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
       <div class=" justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item ml-auto">
-            <a class="navbar-brand" href="/logout">Logout {{u.username}}</a>
+            <a class="navbar-brand" href="/logout">Logout {{session["username"]}}</a>
           </li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
                             <p>{{ post.time }}</p>
                             <p class="post-stats">{{ post.upvotes|length }} upvotes</p>
                             <!--print upvote button red if user has already upvoted that post-->
-                            {%if u in post.upvoters%} 
+                            {%if session["username"] in post.upvoted_usernames%} 
                                 <button type="submit" class="btn btn-primary disabled-submit-button">Upvote</button>
                             {%else%}
                                 <form method="POST" action="/upvote">
